--- a/assets/sass/styles.css
+++ b/assets/sass/styles.css
@@ -4,7 +4,7 @@
 :root {
   /*reseting rem value; 1rem = 10px*/
   font-size: 10px;
-  --header-height: 5rem;
+  --header-height: 4rem;
   /*colors*/
   --body-color: #FBFBFB;
   --text-color-1: #302B4D;
@@ -105,7 +105,7 @@ main {
 
 body {
   background-color: var(--body-color);
-  width: 100vh;
+  width: 100vw;
   font-family: var(--main-font);
 }
 
@@ -132,6 +132,65 @@ body {
 
 .ingo-logo-go {
   color: var(--green-color);
+}
+
+/*HEADER*/
+.nav {
+  height: var(--header-height);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 0 3rem;
+}
+
+.nav .nav__menu {
+  position: relative;
+}
+
+.nav .nav__toggle i {
+  font-size: var(--big-font-size);
+}
+
+/*NAV TOGGLE*/
+@media screen and (max-width: 899px) {
+  .nav__menu {
+    width: 70%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    -webkit-transition: var(--img-transition);
+    transition: var(--img-transition);
+    background-color: var(--body-color);
+  }
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 3rem;
+}
+
+#close-menu-icon {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+}
+
+/*CLASS SHOW-MENU*/
+.menu-show {
+  right: 0;
 }
 
 /*BREAKPOINTS*/
