--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -7,7 +7,7 @@
     /*reseting rem value; 1rem = 10px*/
     font-size: 10px;
 
-    --header-height: 5rem;
+    --header-height: 4rem;
 
     /*colors*/
     --body-color: #FBFBFB;
@@ -114,7 +114,7 @@ main{
 
 body{
     background-color: var(--body-color);
-    width: 100vh;
+    width: 100vw;
     font-family: var(--main-font);
 }
 
@@ -141,6 +141,54 @@ body{
 .ingo-logo-go{
     color: var(--green-color);
 }
+
+/*HEADER*/
+.nav{
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 0 3rem;
+
+    .nav__menu{
+        position: relative;
+    }
+
+    .nav__toggle i{
+        font-size: var(--big-font-size);
+    }
+
+}
+/*NAV TOGGLE*/
+@media screen and (max-width: 899px){
+    .nav__menu{
+        width: 70%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        transition: var(--img-transition);
+        background-color: var(--body-color)
+    }
+}
+
+.nav__list{
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
+}
+
+#close-menu-icon{
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+}
+
+/*CLASS SHOW-MENU*/
+.menu-show{
+    right: 0;
+}
+
 
 
 /*BREAKPOINTS*/
