--- a/assets/sass/styles.css
+++ b/assets/sass/styles.css
@@ -1,5 +1,5 @@
 /*FONT IMPORT*/
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Poppins:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Poppins:wght@300;400;600&display=swap");
 /*ROOT*/
 :root {
   /*reseting rem value; 1rem = 10px*/
@@ -16,16 +16,16 @@
   /*font-size & tipography*/
   --main-font: 'Merriweather', serif;
   --second-font: 'Poppins', sans-serif;
-  --biggest-font-size: 3.5rem;
+  --biggest-font-size: 4.2rem;
   --bigger-font-size: 3rem;
   --big-font-size: 2rem;
-  --normal-font-size: 1.7rem;
+  --normal-font-size: 1.3rem;
   --small-font-size: 1rem;
   /*font-weight*/
   --font-light: 300;
   --font-regular: 400;
   --font-semi-bold: 600;
-  --font-bold: 700;
+  --font-bold: 900;
   /*margin-bottom*/
   --mb-0-5: .5rem;
   --mb-0-75: .75rem;
@@ -52,7 +52,7 @@
     --biggest-font-size: 5.5rem;
     --bigger-font-size: 4rem;
     --big-font-size: 2.5rem;
-    --normal-font-size: 2rem;
+    --normal-font-size: 1.6rem;
     --small-font-size: 1.4rem;
   }
 }
@@ -75,7 +75,6 @@ h1 {
   font-weight: var(--font-semi-bold);
   color: var(--text-color-1);
   margin-bottom: var(--mb-2-5);
-  letter-spacing: 1.2rem;
 }
 
 h2 {
@@ -92,12 +91,23 @@ a {
   color: var(--text-color-1);
 }
 
+p {
+  color: var(--text-color-1);
+}
+
 b {
   font-weight: var(--font-bold);
 }
 
 img, video {
   max-width: 100%;
+  height: 100%;
+}
+
+button, input {
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 main {
@@ -114,6 +124,7 @@ body {
 .section {
   width: 100%;
   max-width: 968px;
+  margin: 0 auto;
 }
 
 .section__title {
@@ -138,6 +149,7 @@ body {
 
 /*HEADER*/
 .nav {
+  width: 100%;
   height: var(--header-height);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -149,6 +161,9 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 0 3rem;
+  background: transparent;
+  z-index: var(--z-layer-4);
+  position: fixed;
 }
 
 .nav__logo {
@@ -226,6 +241,129 @@ body {
   right: 0;
 }
 
+/*HOME PAGE*/
+.home__section {
+  height: 100vh;
+}
+
+.home__container {
+  height: 100%;
+  padding: 0 0 5rem 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.home__data {
+  width: 50%;
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home__text {
+  width: 400px;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  position: absolute;
+  top: 30%;
+  left: 10%;
+  z-index: var(--z-layer-3);
+}
+
+.home__text h1 {
+  letter-spacing: .8rem;
+}
+
+.home__text p {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-regular);
+  line-height: 2rem;
+}
+
+.home__img-selector {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  z-index: var(--z-layer-3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.home__img-selector button {
+  width: 65px;
+  height: 60px;
+}
+
+.home__img-selector button i {
+  font-size: var(--big-font-size);
+}
+
+#img__change-left {
+  background: var(--green-color);
+}
+
+.home__social {
+  position: absolute;
+  bottom: 0;
+  left: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 1.5rem;
+  font-size: var(--normal-font-size);
+}
+
+.home__img {
+  width: 50%;
+  height: 100%;
+  position: relative;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  z-index: var(--z-layer-2);
+  overflow: var(--img-hidden);
+}
+
+.home__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  float: right;
+  -webkit-filter: contrast(0.8);
+          filter: contrast(0.8);
+}
+
+#img__display {
+  position: absolute;
+  bottom: 2rem;
+  right: 3rem;
+  font-size: var(--biggest-font-size);
+  color: var(--body-color);
+  z-index: var(--z-layer-3);
+}
+
 /*BREAKPOINTS*/
 @media screen and (min-width: 900px) {
   .nav {
@@ -250,6 +388,12 @@ body {
   }
   .nav__list li a {
     font-size: var(--small-font-size);
+  }
+  .home__data {
+    margin-left: 7rem;
+  }
+  .home__text {
+    width: 700px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
