CSS Find yourself section

--- a/assets/sass/styles.css
+++ b/assets/sass/styles.css
@@ -128,8 +128,10 @@ body {
 }
 
 .section__title {
+  font-size: var(--bigger-font-size);
   text-align: center;
   text-transform: capitalize;
+  margin-bottom: var(--mb-3);
 }
 
 .container {
@@ -362,6 +364,116 @@ body {
   font-size: var(--biggest-font-size);
   color: var(--body-color);
   z-index: var(--z-layer-3);
+}
+
+/*FIND YOURSELF*/
+.find__section {
+  padding: 3rem 0;
+}
+
+.find__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  row-gap: 3rem;
+}
+
+.adventure__card {
+  max-width: 200px;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  margin-right: 3rem;
+  border-left: 1.3px solid lightgray;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 2rem;
+}
+
+.adventure__card a {
+  text-decoration: underline;
+  font-weight: var(--font-semi-bold);
+  margin-left: 1rem;
+}
+
+.adventure__card p {
+  padding: 0 2rem 0 1rem;
+}
+
+#adventure-card-1 {
+  margin: 6rem 3rem 0 0;
+}
+
+#adventure-card-1 .adventure__card__title {
+  background: var(--pink-color);
+  opacity: .6;
+}
+
+#adventure-card-1 a {
+  color: var(--pink-color);
+}
+
+#adventure-card-2 .adventure__card__title {
+  background-color: var(--yellow-color);
+  opacity: .6;
+}
+
+#adventure-card-2 a {
+  color: var(--yellow-color);
+}
+
+#adventure-card-3 {
+  margin: 12rem 0 0 0;
+}
+
+#adventure-card-3 .adventure__card__title {
+  background: var(--green-color);
+  opacity: .6;
+}
+
+#adventure-card-3 .adventure__card__title h2 {
+  right: -40px;
+}
+
+#adventure-card-3 a {
+  color: var(--green-color);
+}
+
+.adventure__card__title {
+  width: 50px;
+  height: 25px;
+  position: relative;
+}
+
+.adventure__card__title h2 {
+  font-size: var(--normal-font-size);
+  position: absolute;
+  top: -10px;
+  right: -15px;
+  font-weight: var(--font-semi-bold);
+  color: black;
+  opacity: 1;
+}
+
+.adventure__card__img {
+  overflow: var(--img-hidden);
+}
+
+.adventure__card__img img {
+  height: 260px;
+  width: 220px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /*BREAKPOINTS*/
