--- a/assets/sass/styles.css
+++ b/assets/sass/styles.css
@@ -1,5 +1,5 @@
 /*FONT IMPORT*/
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Poppins:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Poppins:wght@100;300;400;600&display=swap");
 /*ROOT*/
 :root {
   /*reseting rem value; 1rem = 10px*/
@@ -23,6 +23,7 @@
   --normal-font-size: 1.3rem;
   --small-font-size: 1rem;
   /*font-weight*/
+  --font-thin: 100;
   --font-light: 300;
   --font-regular: 400;
   --font-semi-bold: 600;
@@ -54,7 +55,7 @@
     --bigger-font-size: 4rem;
     --big-font-size: 2.5rem;
     --normal-font-size: 1.6rem;
-    --small-font-size: 1.4rem;
+    --small-font-size: 1.1rem;
   }
 }
 
@@ -119,6 +120,7 @@ body {
   background-color: var(--body-color);
   width: 100vw;
   font-family: var(--main-font);
+  overflow-x: hidden;
 }
 
 /*REUSABLE CLASSES*/
@@ -619,7 +621,259 @@ body {
   height: 40px;
 }
 
-/**/
+/*FIND TALENTS*/
+.find-talents__section {
+  overflow: hidden;
+  position: relative;
+}
+
+.find-talents__section-background-layer {
+  width: 130%;
+  height: 400px;
+  background: var(--gray-color);
+  -webkit-transform: rotate(-8deg);
+          transform: rotate(-8deg);
+  position: absolute;
+  bottom: -80px;
+  left: -50px;
+  z-index: var(--z-layer-1);
+}
+
+.find-talents__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.app__screen-layer {
+  width: 50%;
+  min-width: 335px;
+  height: 500px;
+  position: relative;
+  margin-bottom: 7rem;
+}
+
+#iphone-layer {
+  position: absolute;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  z-index: var(--z-layer-3);
+}
+
+.app__screen {
+  position: relative;
+  z-index: var(--z-layer-2);
+  width: 220px;
+  height: 465px;
+  border-radius: 20px;
+  background-color: var(--body-color);
+  margin: .7rem auto 0 auto;
+}
+
+.app__screen img {
+  height: 65%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+#app-add-button {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: var(--body-color);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 55%;
+  right: 10%;
+}
+
+#app-add-button i {
+  font-size: var(--big-font-size);
+  color: var(--green-color);
+}
+
+.app__subscribers {
+  padding: 1rem 2rem;
+}
+
+.app__subscribers h3 {
+  margin-bottom: var(--mb-1-25);
+}
+
+.app__profile {
+  display: -ms-grid;
+  display: grid;
+  margin-bottom: var(--mb-0-75);
+  border-top: 1px solid lightgrey;
+  padding: .3rem;
+  -ms-grid-columns: 1fr 3fr 1fr;
+      grid-template-columns: 1fr 3fr 1fr;
+      grid-template-areas: 'img  name name name likes'  'img  subtitle subtitle . likes';
+}
+
+.app__profile img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: img;
+}
+
+.app__profile h5 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 3;
+  grid-area: name;
+  padding-left: 1rem;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-light);
+}
+
+.app__profile p {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-area: subtitle;
+  font-size: var(--small-font-size);
+  padding-left: 1rem;
+}
+
+.profile__expand {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: likes;
+  display: -ms-grid;
+  display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: '. expand' 'likes heart';
+  -webkit-column-gap: .2rem;
+          column-gap: .2rem;
+}
+
+.profile__expand .expand {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: expand;
+  font-size: var(--normal-font-size);
+  color: var(--pink-color);
+}
+
+.profile__expand span {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: likes;
+}
+
+.profile__expand .heart {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: heart;
+  font-size: var(--normal-font-size);
+  color: var(--pink-color);
+}
+
+.app__data {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 10rem;
+}
+
+.app__data__screen {
+  padding-top: 3rem;
+  width: 220px;
+  min-width: 220px;
+  height: 465px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 5px -7px 17px 8px rgba(54, 54, 54, 0.1);
+          box-shadow: 5px -7px 17px 8px rgba(54, 54, 54, 0.1);
+  position: relative;
+  z-index: var(--z-layer-3);
+}
+
+.app__data__screen img {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  margin-bottom: var(--mb-1-25);
+}
+
+.app__data__screen h3 {
+  color: var(--text-color-1);
+  margin-bottom: var(--mb-0-75);
+}
+
+.app__data__screen h1 {
+  font-family: var(--second-font);
+  font-size: var(--biggest-font-size);
+  color: var(--green-color);
+}
+
+.app__data__screen button {
+  width: 70%;
+  border-radius: 5px;
+  padding: 1rem;
+  font-size: var(--small-font-size);
+}
+
+.app__data__screen ul {
+  list-style: disc;
+  color: var(--green-color);
+  font-size: var(--normal-font-size);
+  padding: 2rem 2rem 0 4rem;
+  margin: 0 0 4rem 0;
+}
+
+.app__data__screen ul p {
+  color: var(--body-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-thin);
+  font-family: var(--second-font);
+  line-height: 1.2rem;
+}
+
+.follow-me__button {
+  border: 1px solid var(--body-color);
+  background: transparent;
+  color: var(--body-color);
+  margin-bottom: var(--mb-1);
+}
+
+.discover__button {
+  background-color: var(--body-color);
+  color: var(--pink-color);
+}
+
 /*BREAKPOINTS*/
 @media screen and (min-width: 900px) {
   .nav {
@@ -650,6 +904,12 @@ body {
   }
   .home__text {
     width: 700px;
+  }
+  .app__data__screen ul {
+    padding-top: 0;
+  }
+  .app__data__screen button {
+    font-size: 1rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
