--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -1,5 +1,5 @@
 /*FONT IMPORT*/
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Poppins:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Poppins:wght@100;300;400;600&display=swap');
 
 /*ROOT*/
 :root{
@@ -28,6 +28,7 @@
     --small-font-size: 1rem;
 
     /*font-weight*/
+    --font-thin: 100;
     --font-light: 300;
     --font-regular: 400;
     --font-semi-bold: 600;
@@ -62,7 +63,7 @@
         --bigger-font-size: 4rem;
         --big-font-size: 2.5rem;
         --normal-font-size: 1.6rem;
-        --small-font-size: 1.4rem;
+        --small-font-size: 1.1rem;
     }
 }
 
@@ -120,12 +121,14 @@ button, input{
 
 main{
     width: 100%;
+    
 }
 
 body{
     background-color: var(--body-color);
     width: 100vw;
     font-family: var(--main-font);
+    overflow-x: hidden;
 }
 
 /*REUSABLE CLASSES*/
@@ -551,8 +554,210 @@ body{
     height: 40px;
 }
 
-/**/
+/*FIND TALENTS*/
+.find-talents__section{
+    overflow: hidden;
+    position: relative;
+}
+.find-talents__section-background-layer{
+    width: 130%;
+    height: 400px;
+    background: var(--gray-color);
+    transform: rotate(-8deg);
+    position: absolute;
+    bottom: -80px;
+    left: -50px;
+    z-index: var(--z-layer-1);
+}
 
+.find-talents__container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.app__screen-layer{
+    width: 50%;
+    min-width: 335px;
+    height: 500px;
+    position: relative;
+    margin-bottom: 7rem;
+    
+}
+
+#iphone-layer{
+    position: absolute;
+    width: 100%;
+    object-fit: contain;
+    z-index: var(--z-layer-3);
+}
+
+.app__screen{
+    position: relative;
+    z-index: var(--z-layer-2);
+    width: 220px;
+    height: 465px;
+    border-radius: 20px;
+    background-color: var(--body-color);
+    margin: .7rem auto 0 auto;
+
+    img{
+        height: 65%;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0;
+    }
+}
+
+#app-add-button{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: var(--body-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 55%;
+    right: 10%;
+
+    i{
+        font-size: var(--big-font-size);
+        color: var(--green-color);
+    }
+}
+
+.app__subscribers{
+    padding: 1rem 2rem;
+    h3{
+        margin-bottom: var(--mb-1-25);
+    }
+}
+
+.app__profile{
+    display: grid;
+    margin-bottom: var(--mb-0-75);
+    border-top: 1px solid lightgrey;
+    padding: .3rem;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-areas: 'img  name name name likes' 
+                         'img  subtitle subtitle . likes';
+    img{
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        grid-area: img;
+    }
+    h5{
+        grid-area: name;
+        padding-left: 1rem;
+        font-size: var(--small-font-size);
+        font-weight: var(--font-light);
+    }
+    p{
+        grid-area: subtitle;
+        font-size: var(--small-font-size);
+        padding-left: 1rem;
+    }
+}
+
+.profile__expand{
+    grid-area: likes;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: '. expand'
+                         'likes heart';
+    column-gap: .2rem;
+
+    .expand{
+        grid-area: expand;
+        font-size: var(--normal-font-size);
+        color: var(--pink-color);
+    }
+    span{
+        grid-area: likes;
+    }
+    .heart{
+        grid-area: heart;
+        font-size: var(--normal-font-size);
+        color: var(--pink-color);
+    }
+
+}
+
+.app__data{
+    width: 50%;
+    
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10rem;
+}
+
+.app__data__screen{
+    padding-top: 3rem;
+    width: 220px;
+    min-width: 220px;
+    height: 465px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 5px -7px 17px 8px  rgba( 54, 54, 54, 0.1 );
+    position: relative;
+    z-index: var(--z-layer-3);
+
+
+    img{
+        width: 75px;
+        height: 75px;
+        border-radius: 50%;
+        margin-bottom: var(--mb-1-25);
+    }
+
+    h3{
+        color: var(--text-color-1);
+        margin-bottom: var(--mb-0-75);
+    }
+    
+    h1{
+        font-family: var(--second-font);
+        font-size: var(--biggest-font-size);
+        color: var(--green-color);
+    }
+
+    button{
+        width: 70%;
+        border-radius: 5px;
+        padding: 1rem;
+        font-size: var(--small-font-size);
+    }
+
+    ul{
+        list-style: disc;
+        color: var(--green-color);
+        font-size: var(--normal-font-size);
+        padding: 2rem 2rem 0 4rem;
+        margin: 0 0 4rem 0;
+
+        p{
+            color: var(--body-color);
+            font-size: var(--small-font-size);
+            font-weight: var(--font-thin);
+            font-family: var(--second-font);
+            line-height: 1.2rem;
+        }
+    }
+}
+
+.follow-me__button{
+    border: 1px solid var(--body-color); 
+    background: transparent;
+    color: var(--body-color);
+    margin-bottom: var(--mb-1);
+}
+
+.discover__button{
+    background-color: var(--body-color);
+    color: var(--pink-color);
+}
 
 
 /*BREAKPOINTS*/
@@ -595,6 +800,17 @@ body{
 
     .home__text{
         width: 700px;
+    }
+
+    .app__data__screen{
+        ul{
+            padding-top: 0;
+            
+        }
+
+        button{
+            font-size: 1rem;
+        }
     }
 
 
