--- a/assets/sass/styles.css
+++ b/assets/sass/styles.css
@@ -874,7 +874,57 @@ body {
   color: var(--pink-color);
 }
 
+/*FOOTER*/
+.footer {
+  padding: 3rem;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.footer__logo {
+  font-size: var(--big-font-size);
+  color: var(--red-color);
+}
+
+.nav__footer {
+  font-family: var(--second-font);
+  color: var(--gray-color);
+}
+
+.footer__title {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-bold);
+  padding-bottom: var(--mb-1-25);
+}
+
+#footer-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  font-size: var(--normal-font-size);
+}
+
 /*BREAKPOINTS*/
+@media screen and (max-width: 599px) {
+  .home__data {
+    width: 25%;
+  }
+  .home__img {
+    width: 75%;
+    float: right;
+  }
+}
+
 @media screen and (min-width: 900px) {
   .nav {
     -webkit-box-pack: start;
