--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -759,9 +759,50 @@ body{
     color: var(--pink-color);
 }
 
+/*FOOTER*/
+.footer{
+    padding: 3rem;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+.footer__logo{
+    font-size: var(--big-font-size);
+    color: var(--red-color);
+}
+
+.nav__footer{
+    font-family: var(--second-font);
+    color: var(--gray-color);
+}
+
+.footer__title{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-bold);
+    padding-bottom: var(--mb-1-25);
+}
+
+
+#footer-social{
+    display: flex;
+    justify-content: center;
+    column-gap: 1rem;
+    font-size: var(--normal-font-size);
+}
+
+
 
 /*BREAKPOINTS*/
 @media screen and (max-width: 599px){
+
+    .home__data{
+        width: 25%;
+    }
+
+    .home__img{
+        width: 75%;
+        float: right;
+    }
 
 }
 
