--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -794,16 +794,104 @@ body{
 
 /*BREAKPOINTS*/
 @media screen and (max-width: 599px){
+    :root{
+        --biggest-font-size: 3.8rem;
+        --bigger-font-size: 3.3rem;
+        --big-font-size: 2.1rem;
+        --normal-font-size: 1.4rem;
+        --small-font-size: 1.1rem;
+    }
+
+    .home__container{
+        padding: 0 0 5rem 1rem;
+    }
 
     .home__data{
         width: 25%;
+    }
+    .home__text{
+        width: 300px;
+        text-shadow: 2px 1px rgba( 54, 54, 54, 0.3 );
+
+        p{
+            visibility: hidden;
+        }
+    }
+
+    .home__img-selector{
+        visibility: hidden;
     }
 
     .home__img{
         width: 75%;
         float: right;
+        img{
+            filter: contrast(.8);
+        }
     }
 
+    .find__section{
+        h1{
+            margin-bottom: var(--mb-1);
+        }
+    }
+
+    .find__container{
+        padding: 0 1rem;
+        row-gap: 8rem;
+    }
+
+    #adventure-card-3{
+        margin: 0 30px 3rem 0;
+    }
+
+    .places__section{
+        padding: 0 1rem;
+    }
+
+    .places__data{
+        width: 180px;
+    }
+
+    .places__video {
+        i{
+            left: 35%;
+        }
+    }
+
+    .footer{
+       display: flex;
+       justify-content: center;
+       flex-wrap: wrap;
+       row-gap: 3rem;
+    }
+
+    .footer__logo{
+        width: 50%;
+        order: 1;
+    }
+
+    .nav__footer{
+        width: 50%;
+    }
+
+    #footer-about{
+        order: 2;
+    }
+    #footer-home{
+        order: 4;
+    }
+
+    #footer-company{
+        order: 5;
+        margin-left: 50%;
+    }
+    #footer-social{
+        order: 3;
+        flex-direction: column;
+        row-gap: 2rem;
+        justify-content: flex-start;
+    }
 }
 
 @media screen and (min-width: 600px){
