--- a/assets/sass/styles.css
+++ b/assets/sass/styles.css
@@ -74,7 +74,7 @@ html {
 
 h1 {
   font-size: var(--biggest-font-size);
-  font-weight: var(--font-semi-bold);
+  font-weight: var(--font-regular);
   color: var(--text-color-1);
   margin-bottom: var(--mb-2-5);
 }
@@ -132,6 +132,7 @@ body {
 
 .section__title {
   font-size: var(--bigger-font-size);
+  font-weight: var(--font-bold);
   text-align: center;
   text-transform: capitalize;
   margin-bottom: 5rem;
@@ -363,6 +364,16 @@ body {
   float: right;
   -webkit-filter: contrast(0.8);
           filter: contrast(0.8);
+  display: inline;
+  height: auto;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.home__img-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 #img__display {
@@ -1072,7 +1083,7 @@ body {
     margin-left: 7rem;
   }
   .home__text {
-    width: 700px;
+    width: 650px;
   }
   .app__data__screen ul {
     padding-top: 0;
