--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -218,8 +218,14 @@ body{
         padding-bottom: 5rem; 
 
             i{
-                font-size: var(--big-font-size);
+                font-size: var(--bigger-font-size);
+                color: var(--body-color);
             }
+    }
+
+    .nav__link{
+        font-size: var(--big-font-size);
+        color: var(--body-color);
     }
 }
 
@@ -244,6 +250,7 @@ body{
 /*HOME PAGE*/
 .home__section{
     height: 100vh;
+    max-width: 1024px;
 }
 
 .home__container{
@@ -299,7 +306,8 @@ body{
 }
 
 #img__change-left{
-    background: var(--green-color);
+    color: var(--text-color-2);
+    transition: 1s;
 }
 
 .home__social{
@@ -313,25 +321,32 @@ body{
 }
 
 .home__img{
-    width: 50%;
+    width: 80%;
     height: 100%;
     position: relative;
     align-self: flex-start; 
     z-index: var(--z-layer-2);
     overflow: var(--img-hidden);
    
+      
+}
+
+.home__img-container{
+    max-width: 580px;
+    height: 90%;
+    display: flex;
+    position: relative;
+    overflow: var(--img-hidden);
+
     img{
+        width: 100%;
         object-fit: cover;
         float: right;
         filter: contrast(.8);
         display: inline;
         height: auto;
         transition: 1s;
-    }  
-}
-
-.home__img-container{
-    display: flex;
+    }
 }
 
 #img__display{
@@ -438,16 +453,16 @@ body{
 
 /*PLACES SECTION*/
 .places__section{
-    height: 100vh;
+    margin-bottom: 5rem;
     padding: 0 5rem;
 }
 
 .places__container{
     max-width: 800px;
     margin: 0 auto;
-    height: 68%;
     position: relative;
     display: flex;
+    padding-bottom: 8rem;
 }
 
 .pink-color{
@@ -456,12 +471,13 @@ body{
 }
 
 .green-color{
-    color: green;
+    color: var(--green-color);
     background-color: var(--green-color);
 }
 
 .yellow-color{
     color: var(--yellow-color);
+    background-color: var(--yellow-color);
 }
 
 .places__layer{
@@ -504,8 +520,8 @@ body{
     flex-direction: column;
     padding-top: 3rem;
     position: absolute;
-    bottom: 7px;
     right: 0;
+    top: 13 0px;
     
     h2{
         color: var(--body-color);
@@ -822,8 +838,9 @@ body{
         width: 25%;
     }
     .home__text{
-        width: 300px;
+        max-width: 300px;
         text-shadow: 2px 1px rgba( 54, 54, 54, 0.3 );
+        padding: 0 2rem;
 
         p{
             visibility: hidden;
@@ -935,10 +952,6 @@ body{
         }
     }
 
-    .nav__menu{
-        margin-left: 3rem;
-    }
-
     .nav__list{
         flex-direction: row;
         
@@ -946,9 +959,13 @@ body{
             margin-left: 5rem;
             
             a{
-                font-size: var(--small-font-size);
+                font-size: var(--normal-font-size);
             }
         }
+    }
+
+    .home__img{
+        width: 80%;
     }
 
     .home__data{
@@ -957,6 +974,10 @@ body{
 
     .home__text{
         width: 650px;
+    }
+
+    .adventure__card{
+        width: 250px;
     }
 
     .app__data__screen{
