--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -521,7 +521,7 @@ body{
     padding-top: 3rem;
     position: absolute;
     right: 0;
-    top: 13 0px;
+    top: 130px;
     
     h2{
         color: var(--body-color);
